# pretalx-local-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: MCP_CLIENT_SETUP.md  SECURITY.md
plan/: local-only-pretalx-mcp-plan.md
src/pretalx_mcp/: __init__.py  config.py  pretalx_client.py  safety.py  server.py
src/pretalx_mcp/models/: __init__.py  common.py  event.py  schedule.py  speaker.py  submission.py
src/pretalx_mcp/tools/: __init__.py  events.py  reviews.py  schedule.py  speakers.py  submissions.py
tests/: _tooling.py  test_config.py  test_events_tools.py  test_integration.py  test_models_common.py  test_pretalx_client.py  test_reviews_tools.py  test_safety.py  test_schedule_tools.py  test_server.py  test_speakers_tools.py  test_submissions_tools.py
